微信扫一扫

--- a/views/chief.html
+++ b/views/chief.html
@@ -464,7 +464,7 @@ function additem(item) {
             '<div class="advisor-code-open-top">'+
               '<img class="advisor-code-open-img" src="'+fn.imageThumb(item.qrcode)+'" />'+
             '</div>'+
-            '<div class="advisor-code-open-bottom">扫一扫，免费咨询'+
+            '<div class="advisor-code-open-bottom">微信扫一扫，免费咨询'+
             '</div>'+
           '</div>'+
           '</div>'+
