--- a/views/widget2/community_advisor/community_advisor.html
+++ b/views/widget2/community_advisor/community_advisor.html
@@ -41,7 +41,7 @@
         <img class="advisor-code-open-img" src="{{helper.imageThumb(advisor.qrcode)}}" />
       </div>
       <div class="advisor-code-open-bottom">
-        扫一扫，免费咨询
+        微信扫一扫，免费咨询
       </div>
     </div>
   </div>
@@ -118,7 +118,7 @@
         <img class="advisor-code-open-img" src="{{helper.imageThumb(advisor.qrcode)}}" />
       </div>
       <div class="advisor-code-open-bottom">
-        扫一扫，免费咨询
+        微信扫一扫，免费咨询
       </div>
     </div>
   </div>
