--- a/views/widget/new_nav_first/nav_login.html
+++ b/views/widget/new_nav_first/nav_login.html
@@ -9,7 +9,7 @@
             <li class="type-nav middle-nav {{'active' if tdk.pagekey == 'ARTICLELIST'}}"><a href="{{helper.urlgen('articles')}}">留学攻略</a></li>
             <li class="type-nav middle-nav {{'active' if tdk.pagekey == 'CHIEF'}}"><a href="{{helper.urlgen('chief')}}">首席顾问</a></li>
             <li class="type-nav middle-nav {{'active' if tdk.pagekey == 'ADVISER'}}"><a href="{{helper.urlgen('adviser')}}">留学顾问</a></li>
-            <li class="type-nav middle-nav"><a href="{{helper.urlgen('case')}}">留学案例</a></li>
+            <!-- <li class="type-nav middle-nav"><a href="{{helper.urlgen('case')}}">留学案例</a></li> -->
             <li class="type-nav big-nav {{'active' if tdk.pagekey == 'PROFILE'}}"><a href="{{ helper.urlgen('about') }}">关于金吉列</a></li>
         </ul>
         <div class="nav-right">
