顶部导航样式

--- a/views/widget/new_nav_first/new_nav_first.css
+++ b/views/widget/new_nav_first/new_nav_first.css
@@ -94,6 +94,9 @@ form, input {
     float: right;
     width: 400px;/*438px;*/
 }
+.new_nav_first_red .nav-right {
+    width: 390px;
+}
 .new_nav_first .new-city{
     float:left;
     position: relative;
