顶部导航样式

--- a/views/widget/new_nav_first/common_nav.html
+++ b/views/widget/new_nav_first/common_nav.html
@@ -12,7 +12,7 @@
             <!-- <li class="type-nav middle-nav"><a href="{{helper.urlgen('case')}}">留学案例</a></li> -->
             <li class="type-nav big-nav {{'active' if tdk.pagekey == 'PROFILE' or tdk.pagekey == 'CULTURE' or tdk.pagekey == 'EVENTS' or tdk.pagekey == 'COOPERATION' or tdk.pagekey == 'CONTACT'}}"><a href="{{ helper.urlgen('about') }}">关于金吉列</a></li>
         </ul>
-        <div class="nav-right">
+        <div class="nav-right nav-right-short">
             <div class="new-searchs new-home-search">
                 <div class="search-type-box">
                     <div class="search-type"><span class="search-type-text" id="searchType">留学</span>
